# ml-backdoor-defense

./: .gitignore  AGENTS.md  CLAUDE.md  EXPECTATIONS.md  IOTID20_STAGED_BENCHMARK.md  LICENSE  PROJECT_CONTEXT.md  README.md  pyproject.toml  run.py
conf/: config.yaml
conf/attack/: badnets.yaml  catback.yaml  none.yaml  tabdoor.yaml
conf/data/: cic_ids2017.yaml  cic_ids2018.yaml  cic_iot_2023.yaml  iotid20.yaml
conf/detection/: mlbd.yaml  mlbd_cso.yaml  mm_bd.yaml  mmbd_cso.yaml  nc_cso.yaml  neural_cleanse.yaml  none.yaml  pt_red.yaml  pt_red_cso.yaml  spectral_signatures.yaml
conf/model/: ft_transformer.yaml  ft_transformer_balanced.yaml  mlp.yaml  resnet.yaml  resnet_balanced.yaml  saint.yaml  saint_balanced.yaml  tabnet.yaml
conf/train/: default.yaml
conf/unlearning/: abl.yaml  bad_teaching.yaml  detected_retrain.yaml  none.yaml  oracle_retrain.yaml  retrain.yaml  rnp.yaml
data/: notes.md
data/notebooks/: CIC-IDS2017.ipynb  CIC-IDS2017_final.ipynb  CIC-IoT23_final.ipynb  CSE-CIC-IDS2018_final.ipynb  IoTID20.ipynb  IoTID20_canonical.ipynb
scripts/: analyze_trigger_candidates.py  rescore_nc_ratio_test.py  run_full_benchmark.py  run_iotid20_full_benchmark.py  run_iotid20_full_benchmark.sh  summarize_benchmark.py  trigger_analysis_log.txt
scripts/trigger_analysis/: cic_ids2017.json  cic_ids2018.json  cic_iot_2023.json  iotid20.json
src/attacks/: __init__.py  badnets.py  base.py  none.py  tabdoor.py
src/data/: DATA_FORMAT_SPEC.md  __init__.py  base.py  cic_ids2017.py  cic_ids2018.py  cic_iot_2023.py  iotid20.py
src/detection/: README.md  base.py  (+15 more)
(+32 files in other folders)
